src/scss/layout/_layout.scss
// Layout styles.
@import "header";
@import "footer";

body {
	background-attachment: fixed;
	background-image: url("../images/background.svg");
	background-position: 0 center;
	background-repeat: repeat-x;
	background-size: cover;
}

// Sticky footer. See https://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
#defaultContainer {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.content-wrapper {
	flex: 1;
	font-size: rem(14);
}

main {
	margin: 0 auto;
	max-width: 75ch;
	width: 100%;
}

article {
	padding: rem(0) rem(27) rem(27) rem(27);

	h2:not(.h3) {
		border-bottom: rem(5) solid $gold;
	}

	.api-content {
		display: block;

		&::after {
			clear: both;
			content: "";
			display: table;
		}
	}
}

// WP customized styles
.has-small-font-size {
	font-size: 84%;
}

.has-large-font-size {
	font-size: 126%;
}

.has-larger-font-size {
	font-size: 168%;
}

// WP styles for vertically aligning text within Media & Text blocks
.is-vertically-aligned-top .wp-block-media-text__content {
	align-self: start;
}

.is-vertically-aligned-center .wp-block-media-text__content {
	align-self: center;
}

.is-vertically-aligned-bottom .wp-block-media-text__content {
	align-self: end;
}

// WP styles for horizontally aligning text within Media & Text blocks
.has-text-align-left {
	text-align: left;
}

.has-text-align-center {
	text-align: center;
}

.has-text-align-right {
	text-align: right;
}

figure {
	display: table;
	margin-left: auto;
	margin-right: auto;
}

p img {
	height: auto;
	max-width: 100%;
}

// Styling for media and text block with media on the left
.wp-block-media-text {
	display: grid;

	.wp-block-media-text__content {
		margin-left: rem(25);
	}

	.wp-block-media-text__media {
		align-self: center;
	}

	img {
		height: auto;
		width: 100%;
	}
}

// Styling for media and text block with media on the right
.has-media-on-the-right {
	.wp-block-media-text__media {
		grid-column: 2;
		grid-row: 1;
	}

	.wp-block-media-text__content {
		grid-column: 1;
		grid-row: 1;
		margin-left: 0;
	}
}

// The folowing CSS rule ensures video content is the width of the article element in mobile and iPad views
.embed--youtube {
	min-width: 100%;
}

.wp-block-group {
	display: grid;
	margin-top: rem(12);

	p {
		margin: 0 auto;
	}
}

// The folowing CSS rule ensures content fits within the viewport for mobile and iPad views
.wp-block-image,
.wp-block-audio,
.wp-block-embed,
.wp-block-media-text,
.wp-block-group {
	img {
		max-width: 100%;
	}

	audio {
		max-width: 100%;
	}

	// Blur images which are missing alt tags altogether
	// or whose alt tags begin with "This image has an empty alt attribute"
	img:not([alt]),
	img[alt^="This image has an empty alt attribute"] {
		filter: blur(10px);
	}
}

video {
	max-height: rem(580);
	width: 100%;
}

figcaption {
	caption-side: bottom;
	display: table-caption;
	font-size: rem(14);
	font-style: italic;
	padding: 1rem 0;
	text-align: center;
}

// The folowing CSS rule ensures that video content fits within the viewport for mobile and iPad views
.wp-block-embed__wrapper iframe {
	width: 100%;
}
// Hide an element visually without hiding it from screen readers
// Reference: https://tailwindcss.com/docs/screen-readers/#app
.screen-reader-only {
	border-width: 0;
	clip: rect(0, 0, 0, 0);
	height: rem(1);
	margin: rem(-1);
	overflow: hidden;
	padding: 0;
	position: absolute;
	white-space: nowrap;
	width: rem(1);
}

@include breakpoint-up(lg) {
	body {
		background-position: center;
	}

	.content-wrapper {
		display: grid;
		font-size: rem(18);
		grid-template-columns: 1fr minmax(75ch, 130ch) 1fr;
		grid-template-rows: auto auto;
	}

	main {
		background-color: $white;
		max-width: 130ch;

		article {
			padding: rem(1) rem(60);
			padding-bottom: rem(62);
		}

		// WP customized styles for Desktop and iPad Pro views
		.embed--youtube {
			min-width: auto;
		}

		.alignleft {
			float: left;
			margin-right: rem(25);
			margin-top: 0;
		}

		.alignright {
			float: right;
			margin-left: rem(25);
			margin-top: 0;
		}

		// Styling for media and text block with media on the left
		.wp-block-media-text {
			.wp-block-media-text__content {
				margin-left: rem(25);
			}

			img {
				height: 100%;
				width: 100%;
			}
		}

		// Styling for media and text block with media on the right
		.has-media-on-the-right {
			.wp-block-media-text__content {
				margin-left: 0;
				margin-right: rem(25);
			}
		}

		.embed--youtube iframe {
			height: rem(326);
			width: rem(580);
		}

		.alignleft,
		.alignright {
			.wp-block-embed__wrapper iframe {
				height: 100%;
				width: 100%;
			}
		}
	}
}

@include breakpoint-up(xl) {
	// When screen sizes >= the iPad Pro landscape mode, use larger sizes for embedded media elements that
	// are aligned left or right.
	.alignleft,
	.alignright {
		.wp-block-embed__wrapper iframe {
			height: rem(326);
			width: rem(580);
		}
	}
}

